[tool.poetry]
name = "gastemenos"
version = "0.1.0"
description = ""
authors = ["Elinaldo Monteiro <elinaldosoft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
django-model-utils = "^4.3.1"
django-jazzmin = "^2.6.0"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
